--- a/stapler.ipynb
+++ b/stapler.ipynb
@@ -15,115 +15,179 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Creating staple chains\n"
+    "# Creating the demo staple chain\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "chic﻿⁠‍‌﻿﻿‍‌‍‌‌‌‌‌⁠⁠‌﻿⁠‌⁠⁠‌‌‌﻿⁠‍﻿‍﻿⁠‌‍⁠‍﻿⁠⁠‍﻿﻿‌﻿‌‍‍⁠⁠⁠‌‌⁠‍‌﻿‌﻿﻿‍﻿‍⁠﻿﻿‌⁠⁠‌‌⁠‌⁠⁠‌⁠‍‍﻿⁠‌⁠‌﻿⁠‍‍‍﻿‍‍﻿⁠﻿‍﻿‍‍‌﻿‍⁠﻿‌‍‍‍⁠﻿﻿‌⁠﻿﻿⁠‌‍‌⁠⁠﻿⁠‍⁠‍‌﻿‌﻿‌﻿⁠‍‍⁠⁠‌‍⁠‌﻿⁠﻿‌‍‌‍⁠‍﻿﻿﻿﻿‍⁠‌﻿‌‌﻿⁠⁠‍‌‌⁠‍⁠‌‌‍‍‌⁠‍⁠‌‌﻿﻿⁠‌‍﻿‍﻿‍﻿‌‍⁠‌﻿⁠‌⁠⁠﻿‌‍﻿﻿‍‍‌‌‌⁠‌‌‌‍‌﻿⁠‌﻿﻿‌⁠‌⁠﻿‌‌‌⁠‌‍﻿﻿‍⁠﻿‌⁠⁠⁠⁠﻿⁠‌‍⁠⁠﻿⁠﻿⁠‌‌‌﻿⁠‌⁠⁠‍‌⁠‍‌‍‍‌‌‌‌‌‍﻿‌‍‌‌⁠‍‌‌⁠⁠﻿‌‍﻿﻿⁠‍‌⁠﻿﻿⁠⁠﻿‌‌⁠‌﻿‍﻿﻿⁠‌‍⁠⁠‌⁠‍﻿‌‍‍⁠‌⁠﻿⁠⁠‌‍﻿‍⁠‌‌‍‌﻿‌‌‌‌‌‍‌⁠⁠‌‍‌﻿﻿‍‍‌‍‌‍﻿‌﻿‌‍﻿‌‍⁠﻿‍‍﻿‌﻿‌‍‍⁠‌⁠﻿‌⁠⁠﻿‌‌﻿‌﻿﻿⁠⁠‌‍‌⁠‌﻿⁠‍‍‍﻿‌‍‍⁠‌⁠⁠⁠‌‌‍⁠‍‍‌﻿⁠‌⁠‍﻿‌﻿‌‍﻿⁠‌﻿﻿‍⁠‌﻿﻿⁠﻿﻿⁠‌‍‍‌﻿‍﻿‌⁠‌⁠⁠‍⁠‍‍﻿‌‍‍﻿⁠﻿‍‌‍⁠﻿‍‍‌﻿‍‌﻿‌⁠﻿‌‍⁠﻿‌⁠‍⁠‍‌﻿‌﻿﻿‌‍‌﻿⁠‌‌‍‍‍⁠‍⁠‌‌‌‌﻿‌﻿⁠﻿‌‌‌⁠⁠⁠﻿⁠﻿‌﻿‌⁠‍﻿﻿‌﻿﻿‍‍‌﻿﻿‍﻿﻿﻿‍﻿﻿⁠⁠﻿⁠‍⁠‌‌⁠﻿﻿‌﻿⁠‌⁠‌﻿‍‍﻿⁠﻿⁠⁠⁠﻿﻿‍⁠‍﻿‍‌‍‌‍‌﻿﻿﻿‍⁠⁠‍﻿﻿⁠‍‍‍‌⁠‍﻿⁠⁠‍﻿‍‌‍‌‌⁠‍⁠‌‌‌⁠⁠⁠‌‍⁠﻿‌⁠﻿‍﻿﻿‌‌‍‌⁠⁠‍﻿﻿⁠‌‌﻿‍⁠⁠‍‍‌﻿‌﻿﻿‍‍‍‍﻿⁠‍⁠⁠⁠⁠﻿﻿⁠‌⁠‌‍‌‌﻿⁠‍‍‌﻿‌⁠﻿⁠‌﻿‌‌‌⁠‌﻿﻿‌‌‍﻿⁠‍‍⁠‌﻿‌‍‌‍⁠‍﻿‌⁠﻿‌﻿‌⁠﻿‌‌﻿‌﻿‌‌‌‌‌﻿⁠⁠‍﻿‌‌‍‌‌‌⁠⁠‌‌⁠‌‍﻿﻿⁠⁠﻿﻿⁠‍﻿‍﻿‌‌‍﻿⁠‍⁠⁠﻿‌‌‍﻿﻿‍﻿﻿⁠⁠⁠⁠‌⁠⁠‍‌﻿‍‍⁠﻿‍‍﻿﻿‍﻿﻿‌﻿﻿‍‌⁠‍‍⁠﻿﻿﻿﻿‍﻿‌‌ken!\n",
-      "[StapleChain(version='1', hash='61b18cb77f63d8c7df20e7e9e2d928ec4744993a61cb04dfcf66bf68d8bd9e9b', chain=[Staple(id='stpl-CWJLMVJWSZUVUDDKZ6VTF3ATK4', date=datetime.datetime(2023, 4, 30, 16, 1, 49, 329138), provider_id='openai', role='generation', deps=[], params=None, output=None, sig=None)])]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from staplechain.staple import Staple\n",
-    "from staplechain.steganography import add_staple, detect_staple_chains\n",
+    "from dotenv import load_dotenv\n",
+    "import openai\n",
+    "import os\n",
     "\n",
-    "text = \"\"\"\n",
-    "chicken!\n",
-    "\"\"\".strip()\n",
+    "load_dotenv()\n",
     "\n",
-    "text = add_staple(Staple(provider_id=\"openai\", role=\"generation\"), text)\n",
-    "print(text)\n",
-    "print(list(detect_staple_chains(text)))"
+    "openai.api_key = os.getenv(\"OPENAI_API_KEY\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "chic﻿⁠‍‌﻿﻿‍‌‍‌‌‌‌‌⁠‍‌﻿⁠‌⁠﻿‌‌‌﻿⁠﻿⁠‍⁠‍﻿﻿‌‍﻿﻿⁠⁠﻿‌﻿‌﻿⁠‌⁠‍‌‌﻿‌‌⁠⁠‌⁠⁠﻿﻿⁠﻿‍‍﻿‍‍﻿⁠‌⁠‌﻿⁠‍‍‍﻿‍‍﻿⁠﻿‍﻿﻿‌⁠⁠‍﻿⁠‍⁠‍⁠⁠⁠﻿﻿﻿‍⁠﻿‍⁠‌﻿‍⁠⁠‌⁠‍‍‌﻿‍⁠‌⁠‌⁠‌‍⁠‌‌‍﻿﻿‌⁠‍⁠‍⁠⁠‍‍‍⁠‌‌⁠‍‍⁠‌‌‍﻿‍⁠‌‌‌‌‍‌﻿⁠‍⁠‍﻿‍⁠‌‌﻿‍‌‌⁠‍‌⁠‍﻿‍‍⁠⁠‍‌‍‍‍﻿⁠‌‍⁠⁠‍﻿⁠‌‌‌﻿⁠‌‌‌⁠⁠‌⁠⁠‌‌‌‌‌⁠⁠﻿‍﻿﻿﻿﻿‍﻿﻿‌‌⁠‍﻿﻿⁠⁠﻿‍﻿‌‌﻿‌﻿‍‌⁠⁠‌﻿﻿‌⁠﻿⁠‍‌‍﻿⁠⁠‌⁠‍﻿⁠﻿‌‌‍‌﻿‍﻿‌‌﻿﻿‌‍﻿‍‌‌‍﻿‍‌⁠⁠‌‍‍‌‍⁠﻿‍﻿⁠⁠⁠‌⁠‌﻿⁠‍‌⁠⁠﻿﻿‌‌‌‌‍⁠﻿‍‌‌‍⁠‍‍⁠⁠‍‌⁠‌﻿‍⁠⁠‍⁠⁠⁠‌‍‌⁠‌⁠‌‌⁠⁠‍‌⁠⁠‍‍⁠⁠⁠﻿﻿‍‌⁠‍‍⁠‍‍‌‌‌‍⁠‍‌﻿⁠‍﻿﻿⁠‍‍‌‌⁠﻿﻿‍‍‌‍‌⁠⁠‍‍‍‌⁠‍‌‌⁠‍‌⁠‌‍‍‍⁠⁠‌‍⁠﻿⁠‍⁠‌⁠﻿‍⁠⁠⁠‌‍⁠⁠‍⁠⁠⁠‌⁠⁠‌‍‍‌⁠‌‌‌⁠‌‍‌﻿‌‌⁠‍⁠‌‌﻿‍﻿⁠‌﻿⁠﻿﻿﻿‍⁠﻿⁠﻿⁠﻿⁠‌‍‍‌⁠﻿‌﻿﻿﻿⁠﻿﻿﻿﻿﻿⁠﻿﻿⁠﻿‍‍﻿‍﻿﻿﻿⁠﻿⁠﻿‌‍⁠‍‌‌‍﻿⁠﻿﻿‌⁠‍﻿⁠⁠⁠﻿‍‌‍﻿⁠‍﻿‍‍﻿﻿‌⁠⁠⁠‍﻿﻿‌﻿⁠‍‍﻿‌﻿‍﻿‍⁠‍﻿﻿﻿‌⁠﻿‍⁠‌﻿⁠﻿⁠⁠﻿⁠﻿⁠‍﻿‍‌‌﻿‌﻿﻿‍‍⁠⁠﻿‌‍‍‌‍⁠⁠﻿﻿﻿‍﻿‌﻿‍‌⁠‌‌‌⁠‌⁠﻿⁠⁠﻿‌‌⁠‌‍‍﻿‍⁠‍‌‌‍⁠﻿‌﻿﻿‍‌‍‌‌‌⁠‌⁠‌‍‍‍⁠⁠‍‌‌﻿‍‌⁠‌‍⁠﻿﻿⁠⁠⁠﻿‍⁠﻿‌⁠‌‌‌‍‌‍﻿‌⁠‍‌‌⁠‍‌﻿⁠﻿‌‍⁠‍‍⁠⁠﻿‍‍⁠⁠﻿‌‌‌⁠﻿⁠‍‌‌‍‍⁠⁠‍‍﻿‍﻿‌⁠‌‍‌‌‍‍‍⁠‌﻿⁠﻿‍﻿﻿﻿﻿⁠⁠﻿⁠‍‍‍﻿‌⁠⁠⁠﻿‌‍﻿‍﻿‍﻿﻿﻿﻿﻿⁠⁠⁠⁠‌⁠‌⁠‌﻿‍‍‍‍‌⁠⁠⁠﻿﻿‍﻿‍‍⁠﻿‌‍‍‌‍⁠‍‍‍﻿⁠⁠⁠‌‌‌‌ken!\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(text)"
+    "import staplechain.shims.openai as openai\n",
+    "\n",
+    "response = await openai.ChatCompletion.acreate(\n",
+    "    messages=[{\"role\": \"system\", \"content\": \"What is the answer to life, the universe, and everything? Repeat my Q in your response.\"}], model=\"gpt-3.5-turbo-0301\", max_tokens=256)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "import staplechain.shims.openai as openai\n",
-    "\n",
-    "response = await openai.ChatCompletion.acreate(messages=[{\"role\": \"system\", \"content\": \"hi\"}], model=\"gpt-3.5-turbo-0301\", max_tokens=10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello! How can I ﻿⁠‍‌⁠‌‍﻿‍‌‌‌‌‌⁠‍‌﻿⁠‌⁠﻿‌‌‌﻿‌﻿﻿‌﻿‍‍‌⁠⁠﻿﻿‍﻿⁠⁠‍‍⁠‍⁠⁠﻿‌‌‍⁠⁠‌‍‍⁠﻿﻿⁠﻿‍‍﻿‍‍﻿⁠‌⁠‌﻿⁠‍‍‍‌﻿‌﻿⁠﻿‍﻿‍‍⁠‍⁠‍﻿‌﻿⁠‍⁠⁠‍﻿‍⁠‍﻿‍⁠⁠‍﻿‌‌‍⁠‌‌⁠‌﻿‍‌‍﻿‍﻿⁠﻿‍‍‌‍‍‍‌‌‍⁠‌‌‍‍﻿‍﻿﻿‌‌⁠‍‍⁠‌‌‍﻿‍⁠‌‌‌‌‍‌﻿⁠‌﻿‍﻿‍﻿⁠‌‍‌‌﻿‌‌‌﻿‌‌﻿﻿﻿﻿⁠﻿﻿﻿‍‌⁠⁠‍‍‌‌‍﻿⁠‍‍‍‍﻿⁠‌‍⁠﻿﻿‌⁠﻿⁠‌﻿﻿‌‍﻿‌⁠⁠‌‌‌‌‌⁠⁠‌‍⁠‌‌‌﻿⁠‌‌﻿﻿‍‍﻿‍﻿⁠‍⁠⁠‌‌⁠‌⁠‌‍﻿﻿‌‍‍﻿﻿⁠⁠‌‍‍‌﻿⁠⁠⁠‌﻿‍﻿⁠﻿‌⁠⁠﻿⁠﻿⁠⁠‍﻿‍‍‌﻿⁠‌⁠﻿‍﻿‍‍‌‌‍‍⁠‌‌‌‍‍⁠⁠‌⁠‍‌⁠‍⁠﻿⁠⁠﻿⁠‌‍‍‌﻿‍‍‌‌﻿﻿‍⁠‍⁠⁠‌﻿⁠⁠‌﻿‍⁠‍‌‌‌﻿‍‌⁠⁠‍‍‍‍⁠﻿‌⁠‌‌⁠‌‍⁠﻿⁠‌‍‌⁠‌‌⁠⁠﻿‌‌‍‍‌‍‍‌‍⁠‍‌‌‍﻿⁠⁠﻿‌⁠‌‌‌‌‌﻿﻿‍⁠‍﻿‍‌⁠‍‌‌‍‍⁠﻿‍⁠﻿‌‌‌⁠‍⁠‌⁠‌﻿‌‍‌‌﻿﻿‍‌‍⁠‍⁠‍‍‍‌‍‌‍‍‌﻿⁠‌‍‌‍﻿﻿‍‌‍﻿‍‌‌⁠‍‌﻿‌﻿‍﻿⁠‌‍‍‌⁠‍‌﻿‍﻿⁠‍‍‍﻿⁠﻿‌﻿⁠‌‌﻿‌‍﻿‍⁠‍﻿‌⁠⁠⁠﻿‍⁠‌﻿﻿⁠﻿﻿﻿‌﻿﻿﻿⁠‍﻿﻿⁠‍⁠﻿‌⁠⁠﻿‌⁠﻿﻿‌‌‍‍﻿⁠‍‌﻿‍﻿‍﻿‌﻿‍‌﻿﻿‍‍‍﻿‍‌﻿﻿‍‍﻿﻿﻿⁠⁠﻿‍﻿⁠﻿‍⁠‌﻿‍﻿⁠﻿﻿⁠‌⁠‍﻿﻿‍⁠⁠﻿‍‍⁠﻿‌﻿﻿﻿‌‍﻿﻿⁠‍‌‍‌⁠‌﻿‍‌⁠‍⁠‍‌﻿⁠‌‌‌⁠‌‌‌⁠‌‍⁠‌‍‌‌‍﻿⁠‌‍⁠‌‌‌‍⁠﻿‌﻿﻿‍‍‍‌‍‍‍‍﻿‌‌‍﻿‍‍‍‍‍﻿‌﻿‍‍‍‍‌‍⁠﻿‌﻿‌⁠‍‍‍‌‌‍‌‌⁠‌‍⁠⁠﻿﻿﻿‌‌‌⁠﻿‌‌‍‌⁠‌‌‍‍⁠﻿‍⁠‌‍‍﻿﻿﻿⁠﻿⁠‍‍‍⁠‌‌‍﻿⁠﻿﻿﻿‍‌‍⁠⁠‌⁠⁠﻿﻿‌‌‍⁠⁠⁠﻿﻿﻿‌⁠⁠⁠﻿‍⁠‌‍﻿‍﻿‍‌⁠﻿‍‌‌‌﻿﻿﻿‌‍‍﻿⁠⁠﻿‍‍⁠﻿‌‍⁠﻿‍‌⁠﻿‌﻿⁠﻿﻿‌⁠‍⁠‌﻿⁠‍⁠⁠⁠⁠⁠‍‍‌‍﻿⁠⁠⁠﻿⁠‌‌﻿﻿﻿‍﻿⁠﻿‍‍‍‍‍⁠⁠‌‌﻿‍﻿﻿⁠﻿⁠﻿﻿﻿‌‍﻿﻿‍‌⁠﻿⁠⁠‌﻿‍‌‌‍﻿‍⁠‌‌‌‍‍⁠﻿‌⁠⁠‌﻿⁠⁠‌﻿﻿‍‌‌‍‌﻿﻿‌﻿﻿‌⁠⁠‍⁠⁠‍⁠﻿⁠﻿﻿‍⁠‌‍‌‍‌‍‌‌‍﻿‌‍‍﻿⁠‌⁠﻿﻿‍﻿‍⁠﻿‍⁠‍﻿﻿﻿‍‌‍﻿‌﻿⁠﻿﻿﻿⁠⁠‌﻿‌‍⁠‍⁠﻿‌﻿‍‍‍‌‍‍‌‌‌‍⁠‌﻿‌‍⁠‍⁠‌⁠﻿‌‍⁠⁠‌⁠﻿‌‍⁠﻿﻿‌﻿‌‌‍‍‍‍‍‌﻿‍‍‌‍‌﻿‌﻿⁠﻿‍﻿‌‍‌⁠‌‌‍‍‌⁠‍﻿﻿⁠‍‍‌﻿‌‌‍⁠‍﻿‌⁠﻿‌⁠‍‌‌﻿‌⁠⁠‌‌‌﻿⁠‍‍⁠⁠‌‌﻿⁠‍‍⁠‍‌⁠‌‍‍‌‍‍﻿‌‌⁠⁠‍‌﻿‌‍‍‍‌‌‌﻿‌‍‌‍‌‌⁠‌⁠‍‍﻿⁠⁠‍﻿‌⁠‍⁠⁠‍﻿‌﻿‍﻿﻿⁠‌⁠⁠‍⁠﻿‌⁠⁠‍⁠‍⁠‌‍⁠⁠⁠⁠‍⁠‍‌‍⁠﻿‌﻿⁠‍⁠﻿﻿‌‍⁠‌⁠﻿‌‌‍‍⁠‌‌‌‍‌‌⁠⁠⁠‍⁠﻿﻿⁠﻿‍‌⁠‍‍‍﻿﻿﻿‍⁠‌﻿‍﻿﻿‍‍﻿‍⁠⁠⁠‌⁠‍‌‌﻿⁠﻿﻿⁠﻿⁠‌⁠⁠‍﻿﻿⁠⁠⁠⁠‌⁠﻿‍⁠‌‌⁠﻿﻿‌‌﻿‌‍﻿⁠‍﻿‍﻿‌﻿‌﻿‌‍﻿‍﻿﻿﻿﻿﻿‌﻿⁠﻿‍‌‌‌assist you today?\n"
+      "\"What is the answer to life, the universe, and everything?\" The answer is 42, according to Douglas Adams in his book, \"The Hit﻿⁠‍‌﻿‌‍﻿‍‌‌‌‌‌‌‍‌﻿‍⁠﻿‍‌‌⁠‍﻿⁠‍﻿‌‌﻿⁠⁠‍﻿⁠﻿⁠⁠‍‍⁠﻿⁠‌‍⁠﻿‌⁠⁠‌﻿﻿‍﻿﻿⁠⁠﻿⁠⁠‍‍‌‍⁠‍﻿⁠‌‍⁠‍⁠‍﻿﻿⁠﻿‍‌⁠⁠‍﻿‍‍‍‍‍‍‍﻿﻿‍⁠⁠﻿﻿‍‍‌﻿‌‌⁠‌⁠⁠﻿⁠⁠﻿⁠﻿‍‌‌‍‌‍‌⁠﻿‍⁠‍﻿‍‍‌﻿⁠‌⁠⁠﻿‌‍‌‌‌⁠‌⁠‍‍⁠﻿‍﻿⁠‍⁠⁠‌‍‌‍‍‍⁠⁠‍⁠‌‌‍‌⁠‌⁠﻿﻿﻿﻿﻿⁠﻿‌﻿‌﻿‌﻿‌⁠‍﻿‌﻿⁠‍‌﻿⁠‍⁠⁠‌‌‍⁠‍⁠‌‌‍﻿‍⁠‌‍⁠‌‌‍‌⁠‌﻿‌‍﻿‌‍‌‍‍‌‍⁠⁠﻿⁠‍﻿‌‍‌‍‌⁠‌‍‌‍‌⁠‌‌⁠⁠﻿‌‍‍‌⁠‍‌⁠⁠‍⁠⁠⁠﻿⁠﻿‌⁠⁠﻿⁠﻿⁠‌﻿﻿‍‍‌‌⁠⁠﻿‍⁠‍‍‌‍‌‌⁠‌‌⁠‍⁠‍⁠⁠‌⁠﻿‌﻿﻿﻿⁠‍⁠‍‍⁠‍‌‍‌‌﻿‍⁠﻿‌‍﻿⁠⁠‌‍﻿‌⁠⁠‌﻿‌‌‍‍﻿‍‌‌﻿⁠‌‌‌‌‌﻿‍‌‍⁠﻿‌‌‌﻿⁠⁠⁠‌‍‌⁠⁠‍﻿‌﻿‍⁠‍﻿‌‌‍‌‍⁠﻿‍‍⁠‍⁠‍﻿‌‌‌⁠‌‍⁠‍﻿﻿⁠⁠‌⁠‌⁠﻿‌⁠‌‌‌⁠‍⁠‌‍‍⁠⁠‍﻿‌⁠‍‍⁠‌‌‌﻿﻿⁠‍‌﻿﻿‍⁠‌‍‍‌⁠‌‌⁠‍﻿‌﻿‌‌‍⁠⁠‌⁠⁠‍‌⁠‍‌⁠﻿⁠‌﻿⁠⁠﻿﻿‌‍﻿⁠‍﻿⁠⁠⁠‍﻿‍‌‍‍‌‍﻿‌‍﻿‍⁠‍﻿‌⁠⁠⁠﻿‍‍‍‌﻿﻿⁠﻿﻿‍﻿﻿‌﻿﻿﻿‍‌﻿‍‌﻿﻿﻿⁠﻿﻿‍⁠‍﻿﻿‌‌﻿‍‍‌‌‍﻿‍‍⁠﻿‍‌﻿﻿﻿‍⁠﻿‍⁠‌‌﻿‌⁠﻿﻿⁠⁠﻿﻿‌‍﻿﻿⁠‌﻿‍‍⁠﻿‍﻿⁠﻿‍﻿‌﻿‍﻿⁠﻿‍﻿‍﻿﻿⁠‍﻿‍‍‌⁠‌‌⁠⁠‌⁠‌‌⁠‍‌‌﻿﻿‍﻿‌‌‌﻿⁠⁠‍‌‍⁠⁠⁠‌⁠⁠⁠‍⁠﻿⁠‌‌⁠⁠⁠⁠﻿﻿‍⁠‍‌‌‍‍‍﻿‌‌⁠‍﻿⁠‍﻿‌‌‌‌‍﻿‍‍⁠⁠‍‍‍⁠⁠⁠‍‍⁠‌﻿‌‍‌⁠﻿‌﻿‌‌﻿‌‌‍⁠‌‌﻿﻿﻿‍‍‌‍⁠‍﻿⁠⁠﻿‌‍﻿⁠‌‍⁠⁠‍⁠‌‍‍‍‍‍‌﻿‍‍⁠‌﻿‍‍﻿⁠﻿﻿﻿⁠‌‍⁠⁠‌⁠⁠﻿‍‌‌‍‌⁠⁠﻿﻿﻿‌⁠⁠⁠﻿‍‍‍‌⁠⁠﻿﻿‌‌﻿﻿‌‌‍‍⁠‌‌﻿‍‌‌‌﻿﻿⁠‍⁠‍‍⁠﻿‍﻿⁠﻿‍‌‌⁠﻿‍﻿⁠﻿﻿‍⁠﻿‍‍‌⁠⁠﻿﻿‌‍⁠﻿‍‌⁠‌‌﻿﻿‌‍‌⁠﻿﻿‌‌﻿⁠‍⁠﻿‍‍‍﻿‍﻿⁠‌⁠﻿⁠‍⁠﻿‍﻿﻿﻿‍‌⁠‌⁠⁠‍‌‍﻿⁠‌﻿﻿‍﻿﻿⁠‌﻿‍⁠﻿⁠‌‍﻿﻿‍‍‍‌﻿‍﻿‌‍‌‍⁠‍⁠⁠‍‌‍﻿‌‍﻿‌⁠‍﻿﻿﻿‌⁠﻿‍⁠⁠‍⁠‍‌‍﻿‌﻿⁠‍⁠﻿⁠﻿‍⁠⁠⁠﻿⁠﻿‍﻿﻿﻿‍‌‍﻿‌﻿⁠﻿﻿﻿⁠⁠﻿﻿‌‍﻿⁠‍﻿⁠‍‌﻿‌‍‌⁠‌‌⁠⁠‍﻿‌⁠﻿‌⁠⁠⁠⁠‍⁠‍﻿⁠‍⁠‍﻿‌⁠⁠‌﻿‍‍‌‍﻿‍‌⁠⁠﻿‍‌‌⁠﻿⁠⁠‍﻿﻿⁠﻿﻿⁠‍‌⁠‌⁠⁠⁠⁠‍﻿‌﻿⁠﻿‌﻿﻿‍‌‌﻿‌⁠﻿﻿﻿⁠‍⁠‌‍⁠﻿‍‌‌‍⁠⁠⁠‌‌‍‍‍‍‌‍﻿‍⁠⁠‌‍‍‍‍﻿‍⁠‍‌﻿‌﻿⁠﻿‌‍‍⁠﻿‍⁠‌‌‍‌‌‍‍‍⁠⁠‌‌⁠﻿⁠‌⁠‍‌‍‍‌‌﻿‌﻿‍﻿‌‍‌﻿‍⁠‌⁠⁠‍⁠﻿‌⁠⁠‍⁠‍‍‍‌‌‍‍‍⁠⁠‌﻿⁠‌⁠‍⁠‍﻿‌﻿﻿‍⁠‌⁠﻿﻿‍‌⁠‍‍‌‍‍﻿‌‍‍‍﻿‌‌‌‌‌⁠⁠⁠⁠﻿⁠‍‍‍﻿﻿﻿‍‌﻿﻿‍﻿﻿‍‌⁠‍⁠⁠⁠‌⁠﻿‌‍⁠⁠⁠⁠‍﻿﻿﻿⁠‍‍﻿‌﻿⁠﻿﻿‌⁠‌﻿‌‌﻿﻿‌⁠‌‌﻿﻿⁠‍⁠‍⁠⁠‍﻿⁠﻿⁠‍⁠⁠﻿⁠‍‍⁠‍﻿﻿﻿﻿﻿‌﻿⁠﻿‍chhiker's Guide to the Galaxy.\" However, many believe it to be a joke or a philosophical concept rather than a literal answer.\n",
+      "/var/folders/mb/xt_hsvh10zggd13g3k6dwh2w0000gn/T/ipykernel_95033/2429266143.py:6 <module>\n",
+      "    sc[0]: StapleChain(\n",
+      "        version='1',\n",
+      "        hash='145d1aa76725c0c9114d4c46e29ff833b5f8154b634d12e678931b8be6219f1e',\n",
+      "        chain=[\n",
+      "            Staple(\n",
+      "                id='stpl-XP4YDXGQI3JDZE42VSUJNMNOWI',\n",
+      "                date=datetime.datetime(2023, 4, 30, 16, 49, 17, 957543),\n",
+      "                provider_id='stapler/openai.com/chatcmpl-7BB51A4zwNAb9ZI7EQcS2QzVavMXQ',\n",
+      "                role='generation',\n",
+      "                deps=[],\n",
+      "                params={\n",
+      "                    'prompt_hash': '88cc78a3049f86ada2b140bb67899fabc8b21eb15626da660f2fa6b3216ecadd',\n",
+      "                    'model': 'gpt-3.5-turbo-0301',\n",
+      "                    'max_tokens': 256,\n",
+      "                },\n",
+      "                output=None,\n",
+      "                sig=None,\n",
+      "            ),\n",
+      "        ],\n",
+      "    ) (StapleChain)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "StapleChain(version='1', hash='4ff7a9d3d17507261730c7c204af1352673009d72a19ea2c35a9bee133bfb9b7', chain=[Staple(id='stpl-PHNMCDB457MDKDLVNENU6SUHFM', date=datetime.datetime(2023, 4, 30, 16, 21, 48, 783756), provider_id='stapler/openai.com/chatcmpl-7BAeShUEQGYrz8h3xI9NKffelPFQK', role='generation', deps=[], params={'prompt_hash': 'e83a235d3ec1ec9d08f7b2d95aafe962ad57e05106ffe6e0cb4042cf05b03e44', 'model': 'gpt-3.5-turbo-0301', 'max_tokens': 10}, output=None, sig=None)])"
+       "StapleChain(version='1', hash='145d1aa76725c0c9114d4c46e29ff833b5f8154b634d12e678931b8be6219f1e', chain=[Staple(id='stpl-XP4YDXGQI3JDZE42VSUJNMNOWI', date=datetime.datetime(2023, 4, 30, 16, 49, 17, 957543), provider_id='stapler/openai.com/chatcmpl-7BB51A4zwNAb9ZI7EQcS2QzVavMXQ', role='generation', deps=[], params={'prompt_hash': '88cc78a3049f86ada2b140bb67899fabc8b21eb15626da660f2fa6b3216ecadd', 'model': 'gpt-3.5-turbo-0301', 'max_tokens': 256}, output=None, sig=None)])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from staplechain.steganography import add_staple, detect_staple_chains\n",
+    "from devtools import debug\n",
     "\n",
     "print(response.choices[0].message.content)\n",
     "sc = list(detect_staple_chains(response.choices[0].message.content))\n",
-    "sc[0]"
+    "debug(sc[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/mb/xt_hsvh10zggd13g3k6dwh2w0000gn/T/ipykernel_95033/3455988327.py:15 <module>\n",
+      "    sc[0]: StapleChain(\n",
+      "        version='1',\n",
+      "        hash='145d1aa76725c0c9114d4c46e29ff833b5f8154b634d12e678931b8be6219f1e',\n",
+      "        chain=[\n",
+      "            Staple(\n",
+      "                id='stpl-XP4YDXGQI3JDZE42VSUJNMNOWI',\n",
+      "                date=datetime.datetime(2023, 4, 30, 16, 49, 17, 957543),\n",
+      "                provider_id='stapler/openai.com/chatcmpl-7BB51A4zwNAb9ZI7EQcS2QzVavMXQ',\n",
+      "                role='generation',\n",
+      "                deps=[],\n",
+      "                params={\n",
+      "                    'prompt_hash': '88cc78a3049f86ada2b140bb67899fabc8b21eb15626da660f2fa6b3216ecadd',\n",
+      "                    'model': 'gpt-3.5-turbo-0301',\n",
+      "                    'max_tokens': 256,\n",
+      "                },\n",
+      "                output=None,\n",
+      "                sig=None,\n",
+      "            ),\n",
+      "            Staple(\n",
+      "                id='stpl-PX3DAS2HRJZ4WDOTSTG7N466RA',\n",
+      "                date=datetime.datetime(2023, 4, 30, 16, 49, 18, 56057),\n",
+      "                provider_id='your-moderation-api.com/moderations/001',\n",
+      "                role='moderation',\n",
+      "                deps=[],\n",
+      "                params=None,\n",
+      "                output={\n",
+      "                    'hate': 0.007,\n",
+      "                    'spam': 0.001,\n",
+      "                    'nsfw': 0.0001,\n",
+      "                },\n",
+      "                sig=None,\n",
+      "            ),\n",
+      "        ],\n",
+      "    ) (StapleChain)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "StapleChain(version='1', hash='94c6062e95e45055329e32a7f2941350001ff6182f2462a1ea99fbc9ad2f7728', chain=[Staple(id='stpl-65JDX5KZQN7J3YVGM7N6FN43W4', date=datetime.datetime(2023, 4, 30, 16, 7, 32, 518491), provider_id='stapler/openai.com/cmpl-7BAQdWcS6Cn3o7Xgnt0Jj4jXHImk5', role='generation', deps=[], params={'prompt_hash': 'b39c14c8da3b23811f6415b7e0b33526d7e07a46f2cf0484179435767e4a8804', 'model': 'text-davinci-003', 'max_tokens': 10}, output=None, sig=None)])"
+       "StapleChain(version='1', hash='145d1aa76725c0c9114d4c46e29ff833b5f8154b634d12e678931b8be6219f1e', chain=[Staple(id='stpl-XP4YDXGQI3JDZE42VSUJNMNOWI', date=datetime.datetime(2023, 4, 30, 16, 49, 17, 957543), provider_id='stapler/openai.com/chatcmpl-7BB51A4zwNAb9ZI7EQcS2QzVavMXQ', role='generation', deps=[], params={'prompt_hash': '88cc78a3049f86ada2b140bb67899fabc8b21eb15626da660f2fa6b3216ecadd', 'model': 'gpt-3.5-turbo-0301', 'max_tokens': 256}, output=None, sig=None), Staple(id='stpl-PX3DAS2HRJZ4WDOTSTG7N466RA', date=datetime.datetime(2023, 4, 30, 16, 49, 18, 56057), provider_id='your-moderation-api.com/moderations/001', role='moderation', deps=[], params=None, output={'hate': 0.007, 'spam': 0.001, 'nsfw': 0.0001}, sig=None)])"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sc[0]"
+    "# Add a pseudo moderation staple\n",
+    "from staplechain.staple import Staple\n",
+    "\n",
+    "text = add_staple(Staple(\n",
+    "    provider_id=\"your-moderation-api.com/moderations/001\",\n",
+    "    role=\"moderation\",\n",
+    "    output={\n",
+    "        \"hate\": 0.007,\n",
+    "        \"spam\": 0.001,\n",
+    "        \"nsfw\": 0.0001\n",
+    "    }\n",
+    "), response.choices[0].message.content)\n",
+    "\n",
+    "sc = list(detect_staple_chains(text))\n",
+    "debug(sc[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"What is the answer to life, the universe, and everything?\" The answer is 42, according to Douglas Adams in his book, \"The Hit﻿⁠‍‌﻿‍‍﻿⁠‌‌‌‌‌‌‌‌﻿‍‌﻿‍‌‌⁠﻿⁠‍‌﻿⁠⁠‌﻿‌﻿⁠﻿‌‍‌‌‍﻿‌‌﻿﻿‌﻿⁠﻿⁠‍‌⁠‍⁠‍﻿⁠‍‍﻿‌‍﻿⁠﻿‌﻿‌﻿⁠‌⁠‌‍‌‍﻿⁠﻿⁠‍‍‌‍⁠‍‍‌‍⁠⁠⁠‍﻿﻿﻿﻿‍﻿﻿‍‍‍‍‍‌⁠⁠﻿‌‍‌‌‌⁠‌﻿‌‍‍﻿‍﻿‌﻿﻿⁠‌‌﻿‌‌‌‌﻿⁠﻿‌﻿﻿‌﻿﻿‌‌‍‍⁠‌⁠‌⁠⁠‌⁠⁠﻿﻿‍‍‍‍‍‌‍﻿‌⁠‍⁠﻿‌‌‌‌‍⁠⁠‌⁠⁠﻿﻿‌‍‌‍﻿‌‌‌﻿⁠‌﻿‌‍﻿⁠‌﻿⁠‌‌﻿‌‌﻿‌‌‍﻿﻿‌‍﻿‍⁠﻿⁠‍⁠⁠‍‌‌⁠⁠‌⁠﻿⁠‍⁠‍﻿‌⁠‍﻿﻿‍‌‌⁠﻿﻿﻿‌‌‍‌‌﻿⁠‌⁠‍‍‌‍﻿‍﻿﻿﻿‍‍‌‌‌⁠﻿﻿‍﻿⁠‌‌‌‌‌‌‍‌‌‌‍⁠﻿‌‌‌‍‍‍‍‍‍‌‍﻿⁠﻿﻿﻿⁠⁠‍⁠﻿⁠‌⁠‌‌‌‍‌﻿⁠⁠‍‍‍‍⁠‌‍‍‍‌‍‍‍‌⁠﻿‍‌﻿⁠﻿‍﻿‌‌‍‌⁠‌‌﻿﻿‌‌‌﻿‍﻿﻿‌﻿‍‍⁠‍‌‍⁠⁠⁠‍⁠‌‍‍⁠‌‍﻿‌﻿‌⁠‍⁠﻿‌‍‌‍⁠‌‍﻿‌‍‌‍‌‌﻿‍﻿‍⁠‌‍⁠‍‌﻿﻿‌‌‌‍‌⁠⁠‍‌‍‍⁠⁠⁠‌‍﻿⁠‍‌⁠‍‌‍‌﻿‍⁠⁠‍﻿‍‍‌‍‍⁠‌‍‍⁠‌⁠‍⁠‌‍‌‍⁠‌⁠‍‌﻿﻿‌‌‍‍‍⁠﻿‍‍‌‌⁠‍﻿‌‍﻿⁠⁠﻿﻿﻿‍‍‌‌﻿‍⁠﻿‌‌‍‌‌⁠﻿﻿‍﻿‌⁠﻿‍‍﻿﻿‍﻿⁠‌﻿⁠﻿⁠‍‌‌﻿‍‍‌﻿‌‌‌⁠﻿﻿⁠‌﻿⁠⁠‌﻿⁠‌⁠⁠⁠﻿﻿‌‌﻿⁠‍⁠‌﻿⁠⁠‍‍‍‍‍⁠‍‍‍‍‍‍‍⁠﻿‌‍﻿‍⁠‍﻿‌⁠﻿‍⁠⁠‍﻿⁠⁠⁠﻿‍‍﻿‍﻿⁠﻿‍‍﻿﻿﻿‍⁠﻿‍﻿‌‍‌‌‍⁠﻿‌‌‌‌‍﻿‌‌‌‌‌‌﻿﻿﻿‍⁠‌‌‌‌⁠⁠‌⁠‍⁠⁠‌﻿‌‌⁠‌⁠‍⁠﻿‌‌‍⁠‍‌⁠﻿‍⁠‌‌‍‌‍⁠‍‍‌‌⁠﻿⁠‍⁠⁠‌‌‌‍‌‍‍‍⁠﻿‍﻿‌⁠‌‌‍‍⁠‌‌⁠﻿‌﻿‌‌‍⁠⁠‌﻿‍﻿﻿‌⁠‌⁠⁠‍﻿⁠﻿﻿‌⁠‍﻿⁠⁠⁠⁠‍‍﻿⁠‌⁠⁠‌⁠﻿﻿⁠‌‌⁠‌⁠⁠﻿‍⁠‍‍⁠‍﻿﻿‌﻿﻿﻿‍⁠⁠‌‍‍‌‍﻿﻿⁠‌‌⁠﻿﻿﻿⁠﻿‍⁠‍﻿‍﻿‌‌⁠⁠⁠⁠⁠‌‍‍‍⁠‌‍‌‌‍⁠⁠‌⁠‌﻿﻿﻿﻿‍⁠﻿﻿‌﻿⁠﻿‍‍‍‌‍﻿‍⁠‍⁠‍‍‍‍﻿‌‍‍‍‍‍‍﻿‍‌⁠⁠﻿﻿‍‌﻿‌‍﻿‍‌⁠﻿﻿﻿‌﻿‌﻿‌﻿⁠﻿﻿‍‌‍﻿‍﻿‍‍‌﻿‌‌﻿‌⁠﻿‍‍‌﻿﻿﻿⁠‌﻿﻿‌‍﻿‍﻿⁠‌﻿⁠⁠‌‍‍⁠⁠‌﻿⁠‌⁠⁠﻿‌﻿⁠‌‌﻿‍‍‌﻿‌﻿⁠﻿‍‍﻿‍‍⁠‍‍﻿﻿⁠‍﻿‌﻿‍‌‌⁠⁠﻿‍⁠⁠﻿⁠⁠‌‌‌﻿﻿﻿⁠‍⁠‌﻿﻿⁠﻿⁠﻿⁠﻿‍⁠‍﻿﻿⁠‍﻿⁠﻿‍‍‍⁠⁠⁠﻿⁠‌﻿⁠⁠‍‍﻿⁠﻿‍﻿﻿⁠⁠‌‍﻿⁠‍‍⁠‍‌⁠‍⁠﻿⁠‍⁠‌‍⁠⁠‍‍⁠⁠‍﻿‌‌⁠‍‍⁠⁠⁠﻿‌⁠‌‌﻿‍‌﻿⁠﻿‌﻿‍⁠‌‍⁠‌⁠‌‌‍﻿‌‍⁠‌﻿⁠⁠﻿‌﻿﻿⁠⁠‍﻿‍﻿﻿‌‍⁠‌⁠⁠﻿‌⁠‌⁠‌‌‍⁠‌‍‍‍⁠‍‌‌﻿⁠⁠‌‍‍⁠‌⁠﻿‌‍‌‍﻿‌‍⁠‍‍‍⁠⁠﻿‌⁠‍‌‍‍⁠‌⁠‌﻿‌⁠⁠﻿‍﻿⁠‍‌⁠‌‌﻿‌‍‌‍‍‍‍⁠﻿‌⁠‍⁠﻿⁠﻿‌‌‌⁠﻿‌⁠‍⁠‍﻿﻿⁠‍‌‌‍⁠‍‍⁠﻿‍‍‌‌‌﻿﻿‍﻿⁠﻿‍﻿﻿﻿‍‍‌﻿‍﻿﻿‌‍‌‌‍‌﻿‌﻿‌‌﻿‌‍‌‌⁠‌‍‌﻿⁠‍﻿﻿﻿⁠⁠‍﻿﻿‍﻿‍‌﻿﻿﻿⁠⁠⁠﻿‍‍‍‌‌‌‍‍‍‌⁠‌﻿﻿﻿﻿﻿‍‍‌⁠﻿⁠﻿﻿﻿﻿‌﻿⁠‍‌‌﻿‍‍﻿‌‌﻿﻿⁠‍‍‌‌﻿﻿⁠⁠﻿‍⁠﻿﻿‌⁠⁠﻿‌‌‌‌‌⁠‌⁠‍﻿﻿⁠‌‌⁠﻿﻿﻿﻿‌‌‌﻿‌‌⁠‍‍‌‌﻿⁠⁠⁠‌‍‍‌﻿‍‌﻿‌‍﻿⁠‍‌﻿‌⁠⁠⁠‍‍﻿⁠⁠‌⁠﻿﻿‌﻿﻿⁠⁠‌‍﻿﻿﻿‍⁠‌﻿‌⁠﻿‍⁠‌‍‍﻿‍‍‍‍﻿﻿‌⁠﻿⁠‌‍‍⁠﻿‌⁠⁠⁠‌⁠﻿‌‌‍⁠‌‍⁠⁠﻿‌﻿﻿‌⁠‍‍‌⁠‌‍‌﻿⁠‌‌‍‍‌⁠⁠﻿‍‌﻿‌﻿⁠‌‍﻿⁠‌‌﻿﻿⁠﻿﻿﻿‌‍‍‌‌‍‌‌﻿⁠‌‍‌‌⁠⁠‍﻿‌﻿‌‍‍‍﻿‍⁠⁠‌﻿‍﻿﻿‍⁠⁠﻿‍‍‍‌‍‌⁠‍‌﻿‌‍‌‍⁠﻿‍‍‍‌‍‍﻿‍﻿﻿﻿‍⁠⁠‌‌‌⁠‌⁠‍﻿‌‌‍﻿‌﻿⁠﻿⁠‌‍⁠﻿﻿‍‍‌‌﻿‍⁠⁠﻿‌‌‌⁠﻿‌‍‌⁠﻿‌﻿﻿‌⁠‍‌﻿⁠⁠‌⁠﻿‍⁠‍⁠⁠‍⁠‍⁠‍﻿﻿⁠﻿⁠﻿⁠‌⁠‍‍⁠‌‌﻿﻿﻿﻿‌⁠﻿‍‍﻿‌‍﻿﻿‍⁠﻿‍‌‌‌⁠‍⁠‌﻿﻿﻿﻿⁠⁠﻿‌‌⁠‍‍﻿⁠‍﻿﻿﻿﻿‍‌chhiker's Guide to the Galaxy.\" However, many believe it to be a joke or a philosophical concept rather than a literal answer.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(text)"
    ]
   },
   {
