Switch to poetry

--- a/stapler.ipynb
+++ b/stapler.ipynb
@@ -42,7 +42,15 @@
     "import staplechain.shims.openai as openai\n",
     "\n",
     "response = await openai.ChatCompletion.acreate(\n",
-    "    messages=[{\"role\": \"system\", \"content\": \"What is the answer to life, the universe, and everything? Repeat my Q in your response.\"}], model=\"gpt-3.5-turbo-0301\", max_tokens=256)"
+    "    messages=[\n",
+    "        {\n",
+    "            \"role\": \"system\",\n",
+    "            \"content\": \"What is the answer to life, the universe, and everything? Repeat my Q in your response.\",\n",
+    "        }\n",
+    "    ],\n",
+    "    model=\"gpt-3.5-turbo-0301\",\n",
+    "    max_tokens=256,\n",
+    ")"
    ]
   },
   {
@@ -159,15 +167,14 @@
     "# Add a pseudo moderation staple\n",
     "from staplechain.staple import Staple\n",
     "\n",
-    "text = add_staple(Staple(\n",
-    "    provider_id=\"your-moderation-api.com/moderations/001\",\n",
-    "    role=\"moderation\",\n",
-    "    output={\n",
-    "        \"hate\": 0.007,\n",
-    "        \"spam\": 0.001,\n",
-    "        \"nsfw\": 0.0001\n",
-    "    }\n",
-    "), response.choices[0].message.content)\n",
+    "text = add_staple(\n",
+    "    Staple(\n",
+    "        provider_id=\"your-moderation-api.com/moderations/001\",\n",
+    "        role=\"moderation\",\n",
+    "        output={\"hate\": 0.007, \"spam\": 0.001, \"nsfw\": 0.0001},\n",
+    "    ),\n",
+    "    response.choices[0].message.content,\n",
+    ")\n",
     "\n",
     "sc = list(detect_staple_chains(text))\n",
     "debug(sc[0])"
@@ -220,9 +227,14 @@
     "\n",
     "for _ in range(5):\n",
     "    hasher = minhash.MinHasher(seeds=100, char_ngram=5)\n",
-    "    fingerprint0 = hasher.fingerprint('Lorem Ipsum dolor sit amet'.encode('utf8'))\n",
-    "    fingerprint1 = hasher.fingerprint('Lorem Ipsum dolor sit amet is how dummy text starts'.encode('utf8'))\n",
-    "    print(sum(fingerprint0[i] in fingerprint1 for i in range(hasher.num_seeds)) / hasher.num_seeds)"
+    "    fingerprint0 = hasher.fingerprint(\"Lorem Ipsum dolor sit amet\".encode(\"utf8\"))\n",
+    "    fingerprint1 = hasher.fingerprint(\n",
+    "        \"Lorem Ipsum dolor sit amet is how dummy text starts\".encode(\"utf8\")\n",
+    "    )\n",
+    "    print(\n",
+    "        sum(fingerprint0[i] in fingerprint1 for i in range(hasher.num_seeds))\n",
+    "        / hasher.num_seeds\n",
+    "    )"
    ]
   }
  ],
